# qebbeq

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  image-mirror-example.yaml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
helm/: Chart.yaml  values.test.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  controller-deployment.yaml  controller-rbac.yaml  controller-serviceaccount.yaml  registry-deployment.yaml  registry-ingress.yaml  registry-service.yaml  registry-serviceaccount.yaml
src/: main.rs
src/resources/: image.rs  imagemirror.rs  mod.rs
