[package]
name = "qebbeq"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Hannes Uebelacker <nope86@gmail.com>"]
repository = "https://github.com/tuco86/qebbeq"
homepage = "https://github.com/tuco86/qebbeq"
readme = "README.md"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tokio-util = { version = "0.7.16" }
futures = { version = "0.3.31" }
kube = { version = "1.1.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
humantime = "2.1"
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
